feat: Impl first view

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,9 +1,9 @@
 ---
 import { css } from "../../styled-system/css";
-import Header from "../components/Header.astro";
+import FirstView from "../components/top/FirstView.astro";
 import Layout from "../layouts/Layout.astro";
 ---
 
 <Layout title="test">
-  <Header />
+  <FirstView />
 </Layout>
