feat: Impl blog section

--- a/src/components/top/FirstView.astro
+++ b/src/components/top/FirstView.astro
@@ -53,7 +53,7 @@ const about = vstack({
           alt="にとのアイコン"
           class={circle({
             size: "80%",
-            boxShadow: "0px 0px 8px 0px rgba(0, 0, 0, 0.25)",
+            boxShadow: "normal",
           })}
         />
       </div>
