--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,9 +1,11 @@
 ---
-import { css } from "../../styled-system/css";
+import { container } from "../../styled-system/patterns";
+import Blog from "../components/top/Blog.astro";
 import FirstView from "../components/top/FirstView.astro";
 import Layout from "../layouts/Layout.astro";
 ---
 
 <Layout title="test">
   <FirstView />
+  <Blog />
 </Layout>
