--- a/src/components/top/FirstView.astro
+++ b/src/components/top/FirstView.astro
@@ -1,27 +1,11 @@
 ---
-import { getImage } from "astro:assets";
 import { Image } from "astro:assets";
-import background from "../../assets/first_view/background.png";
 import icon from "../../assets/icon.png";
 import { DESCRIPTION } from "../../consts";
 
 import { css } from "../../../styled-system/css";
-import {
-  container,
-  center,
-  circle,
-  vstack,
-} from "../../../styled-system/patterns";
+import { container, circle, vstack } from "../../../styled-system/patterns";
 import MoreButton from "../MoreButton.astro";
-
-const optimizedBackground = await getImage({ src: background, format: "webp" });
-
-const first_view = center({
-  width: "100%",
-  minHeight: "100dvh",
-  bgPosition: "bottom",
-  bgSize: "cover",
-});
 
 const cont = container({
   display: "flex",
@@ -41,29 +25,24 @@ const about = vstack({
 });
 ---
 
-<div
-  class={first_view}
-  style={{ backgroundImage: `url(${optimizedBackground.src})` }}
->
-  <div class={cont}>
-    <div class={vstack({ gap: "10" })}>
-      <div class={circle({ size: "xs", bg: "white" })}>
-        <Image
-          src={icon}
-          alt="にとのアイコン"
-          class={circle({
-            size: "80%",
-            boxShadow: "normal",
-          })}
-        />
-      </div>
-      <p class={css({ fontFamily: "metro", fontSize: "7xl", color: "white" })}>
-        NITO
-      </p>
+<div class={cont}>
+  <div class={vstack({ gap: "10" })}>
+    <div class={circle({ size: "xs", bg: "white" })}>
+      <Image
+        src={icon}
+        alt="にとのアイコン"
+        class={circle({
+          size: "80%",
+          boxShadow: "normal",
+        })}
+      />
     </div>
-    <div class={about}>
-      <p class={css({ fontSize: "4xl" })}>{DESCRIPTION}</p>
-      <MoreButton href="/about" />
-    </div>
+    <p class={css({ fontFamily: "metro", fontSize: "7xl", color: "white" })}>
+      NITO
+    </p>
+  </div>
+  <div class={about}>
+    <p class={css({ fontSize: "4xl" })}>{DESCRIPTION}</p>
+    <MoreButton href="/about" />
   </div>
 </div>
