refactor: css tokens

--- a/src/components/BlogItem.astro
+++ b/src/components/BlogItem.astro
@@ -9,11 +9,11 @@ interface Props {
 const { date } = Astro.props;
 
 const blog_item = css({
-  border: "1px solid {colors.gray.100}",
+  border: "normal",
   borderRadius: "4xl",
   width: "100%",
   paddingInline: "7",
-  background: "white",
+  background: "bg",
 });
 ---
 
