--- a/src/components/MoreButton.astro
+++ b/src/components/MoreButton.astro
@@ -15,7 +15,8 @@ const button = center({
   pos: "relative",
   fontFamily: "dots",
   fontSize: "3xl",
-  bg: "gray",
+  color: "text.dark",
+  bg: "bg.button",
   gap: "6",
   paddingLeft: "10",
   paddingRight: "6",
