--- a/src/components/top/FirstView.astro
+++ b/src/components/top/FirstView.astro
@@ -19,15 +19,16 @@ const cont = container({
 const about = vstack({
   maxWidth: "50rem",
   borderRadius: "3xl",
-  bg: "white",
   p: "10",
   gap: "8",
+  bg: "bg",
+  border: "normal",
 });
 ---
 
 <div class={cont}>
   <div class={vstack({ gap: "10" })}>
-    <div class={circle({ size: "xs", bg: "white" })}>
+    <div class={circle({ size: "xs", bg: "bg" })}>
       <Image
         src={icon}
         alt="にとのアイコン"
@@ -37,7 +38,13 @@ const about = vstack({
         })}
       />
     </div>
-    <p class={css({ fontFamily: "metro", fontSize: "7xl", color: "white" })}>
+    <p
+      class={css({
+        fontFamily: "metro",
+        fontSize: "7xl",
+        color: "text.light",
+      })}
+    >
       NITO
     </p>
   </div>
