--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,6 +1,6 @@
 ---
 import "@fontsource/zen-dots";
-import '@fontsource/zen-maru-gothic';
+import "@fontsource/zen-maru-gothic";
 
 import "../index.css";
 import Header from "../components/Header.astro";
@@ -26,3 +26,7 @@ const { title } = Astro.props;
     <slot />
   </body>
 </html>
+
+<script>
+  //import "../darkmode";
+</script>
