--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -16,7 +16,7 @@ const optimizedBackground = await getImage({ src: background, format: "webp" });
       pos: "fixed",
       zIndex: "-100",
       width: "100%",
-      height: "100dvh",
+      height: "100lvh",
       backgroundSize: "cover",
       backgroundPosition: "bottom",
     })}
