feat: add border

--- a/src/components/top/FirstView.astro
+++ b/src/components/top/FirstView.astro
@@ -28,7 +28,7 @@ const about = vstack({
 
 <div class={cont}>
   <div class={vstack({ gap: "10" })}>
-    <div class={circle({ size: "xs", bg: "bg" })}>
+    <div class={circle({ size: "xs", bg: "bg", border: "normal" })}>
       <Image
         src={icon}
         alt="にとのアイコン"
