--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -36,8 +36,8 @@ const header = hstack({
   justify: "space-between",
   paddingInline: "4",
   paddingBlock: "4",
-  color: "text",
   transition: "all .5s",
+  color: "text",
   "2xl": {
     color: "text.light",
     paddingInline: "8",
@@ -53,12 +53,14 @@ const header = hstack({
     paddingInline: "7",
     paddingBlock: "1",
     borderRadius: "full",
+    border: "transparent",
   },
   "2xlDown": {
     "&[data-scrolled=true]>a": {
       color: "text",
       bg: "bg",
       boxShadow: "normal",
+      border: "normal",
     },
   },
   _expanded: {
@@ -69,6 +71,7 @@ const header = hstack({
       "&[data-scrolled=true]>a": {
         bg: "transparent",
         boxShadow: "none",
+        border: "transparent",
       },
     },
   },
@@ -114,6 +117,7 @@ const drawer_circle = circle({
   cursor: "pointer",
   zIndex: "header",
   fontSize: "3xl",
+  border: "normal",
   "2xl": {
     display: "none",
   },
