feat: impl apps section

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -34,7 +34,7 @@ const header = hstack({
   left: "0",
   zIndex: "header",
   justify: "space-between",
-  paddingInline: "4",
+  paddingInline: "px.menu",
   paddingBlock: "4",
   transition: "all .5s",
   color: "text",
