--- a/src/components/top/FirstView.astro
+++ b/src/components/top/FirstView.astro
@@ -11,7 +11,7 @@ const cont = container({
   display: "flex",
   flexDirection: "column",
   alignItems: "center",
-  paddingInline: "10",
+  paddingInline: "px.container",
   paddingBlock: "44",
   gap: "20",
 });
