--- a/src/components/Section.astro
+++ b/src/components/Section.astro
@@ -1,24 +1,17 @@
 ---
-import { center, container } from "../../styled-system/patterns";
+import { center } from "../../styled-system/patterns";
 import Heading from "./Heading.astro";
 import MoreButton from "./MoreButton.astro";
 
 interface Props {
   heading: string;
   href: string;
-  class: string;
+  class?: string;
 }
 const { heading, href, class: className, ...rest } = Astro.props;
-const section = container({
-  gap: "20",
-  display: "flex",
-  flexDirection: "column",
-  paddingInline: "10",
-  paddingBlock: "32",
-});
 ---
 
-<section class:list={[section, className]} {...rest}>
+<section class:list={[className]} {...rest}>
   <Heading>{heading}</Heading>
   <slot />
   <div class={center()}>
