--- a/src/index.css
+++ b/src/index.css
@@ -1,1 +1,4 @@
-@layer reset, base, tokens, recipes, utilities;
+@layer reset, base, tokens, external, recipes, utilities;
+
+@import "swiper/css" layer(external);
+@import "swiper/css/pagination" layer(external);
