feat: impl history section

--- a/src/components/top/Blog.astro
+++ b/src/components/top/Blog.astro
@@ -11,7 +11,7 @@ const section = container({
   flexDirection: "column",
   paddingInline: "px.container",
   paddingBlock: "py.section",
-  maxWidth: "5xl",
+  maxWidth: "max.width.container",
 });
 ---
 
