--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -36,45 +36,49 @@ const header = hstack({
   justify: "space-between",
   paddingInline: "px.menu",
   paddingBlock: "4",
-  transition: "all .5s",
+  transition: "all 1s",
   color: "text",
-  "2xl": {
+  lg: {
     color: "text.light",
     paddingInline: "8",
   },
-  //サイト名
-  "&>a": {
-    fontFamily: "metro",
-    transition: "all .5s",
-    fontSize: "5xl",
-    pos: "relative",
-    zIndex: "header",
-    color: "white",
-    paddingInline: "7",
-    paddingBlock: "1",
-    borderRadius: "full",
-    border: "transparent",
-  },
-  "2xlDown": {
-    "&[data-scrolled=true]>a": {
-      color: "text",
-      bg: "bg",
-      boxShadow: "normal",
-      border: "normal",
-    },
+  _after: {
+    content: "''",
+    width: "100%",
+    height: "0%",
+    bg: "linear-gradient(#000b 0%, #0000 100%)",
+    pos: "absolute",
+    top: "0",
+    left: "0",
+    display: "block",
+    zIndex: "-1",
+    opacity: "0",
+    transition: ".3s",
   },
   _expanded: {
     "&>a": {
       color: "text",
     },
-    "2xlDown": {
-      "&[data-scrolled=true]>a": {
-        bg: "transparent",
-        boxShadow: "none",
-        border: "transparent",
-      },
+  },
+  "&[data-scrolled=true]": {
+    _after: {
+      opacity: "1",
+      height: "150%",
     },
   },
+});
+
+const site_name = css({
+  fontFamily: "metro",
+  transition: "all .5s",
+  fontSize: "5xl",
+  pos: "relative",
+  zIndex: "header",
+  color: "white",
+  paddingInline: "7",
+  paddingBlock: "1",
+  borderRadius: "full",
+  border: "transparent",
 });
 
 const nav = center({
@@ -89,7 +93,7 @@ const nav = center({
   _groupExpanded: {
     left: "0",
   },
-  "2xl": {
+  lg: {
     pos: "relative",
     left: "0",
     fontSize: "3xl",
@@ -103,7 +107,7 @@ const nav_list = stack({
   align: "center",
   justify: "center",
   gap: "14",
-  "2xl": {
+  lg: {
     flexDirection: "row",
     gap: "10",
   },
@@ -118,7 +122,7 @@ const drawer_circle = circle({
   zIndex: "header",
   fontSize: "3xl",
   border: "normal",
-  "2xl": {
+  lg: {
     display: "none",
   },
   _groupExpanded: {
@@ -159,7 +163,7 @@ const drawer_lines = vstack({
   data-scrolled="false"
   class:list={[header, "group"]}
 >
-  <a href="/"> NITO LAB. </a>
+  <a href="/" class={site_name}> NITO LAB. </a>
   <button
     type="button"
     aria-controls="header_nav"
