--- a/src/components/top/FirstView.astro
+++ b/src/components/top/FirstView.astro
@@ -12,12 +12,12 @@ const cont = container({
   flexDirection: "column",
   alignItems: "center",
   paddingInline: "px.container",
-  paddingBlock: "44",
+  paddingBottom: "44",
   gap: "20",
 });
 
 const about = vstack({
-  maxWidth: "50rem",
+  maxWidth: "51rem",
   borderRadius: "3xl",
   p: "10",
   gap: "8",
@@ -35,6 +35,7 @@ const about = vstack({
         class={circle({
           size: "80%",
           boxShadow: "normal",
+          textAlign: "center",
         })}
       />
     </div>
