--- a/src/components/Section.astro
+++ b/src/components/Section.astro
@@ -1,4 +1,5 @@
 ---
+import { css } from "../../styled-system/css";
 import { center } from "../../styled-system/patterns";
 import Heading from "./Heading.astro";
 import MoreButton from "./MoreButton.astro";
@@ -12,7 +13,7 @@ const { heading, href, class: className, ...rest } = Astro.props;
 ---
 
 <section class:list={[className]} {...rest}>
-  <Heading>{heading}</Heading>
+  <Heading class={css({ color: "text.light" })}>{heading}</Heading>
   <slot />
   <div class={center()}>
     <MoreButton href={href} />
