--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,30 +1,15 @@
 ---
-import { getImage } from "astro:assets";
-import background from "../assets/first_view/background.png";
 import Blog from "../components/top/Blog.astro";
 import FirstView from "../components/top/FirstView.astro";
 import Layout from "../layouts/Layout.astro";
 
-import { css } from "../../styled-system/css";
 import Apps from "../components/top/Apps.astro";
 import History from "../components/top/History.astro";
-
-const optimizedBackground = await getImage({ src: background, format: "webp" });
+import Background from "../components/Background.astro";
 ---
 
-<Layout title="test">
-  <div
-    class={css({
-      pos: "fixed",
-      zIndex: "-100",
-      width: "100%",
-      height: "100lvh",
-      backgroundSize: "cover",
-      backgroundPosition: "bottom",
-    })}
-    style={{ backgroundImage: `url(${optimizedBackground.src})` }}
-  >
-  </div>
+<Layout>
+  <Background />
   <FirstView />
   <Blog />
   <Apps />
