fix: header, footer

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -5,12 +5,13 @@ const footer = cva({
   base: {
     display: "flex",
     justifyContent: "space-between",
-    direction: "column",
+    flexDirection: "column",
     fontFamily: "dots",
     fontSize: "3xl",
     padding: "10",
     textAlign: "center",
     color: "text.light",
+    gap: "5",
     lg: {
       flexDirection: "row",
     },
